client/src/stylings/course.css
.course{
    font-size: var(--fs-4);
    font-weight: var(--fw-bold);
    background: var(--clr-course-background);
    box-shadow: var(--bs);
    border-radius: var(--br-background);
    margin: var(--margin-wide);
    padding: var(--fs-3);
    width: var(--bw-verylarge);
    transition: transform .3s ease;
    cursor: var(--crsr-pointercrsr-);
    min-width: 40rem;
    display: flex;
    align-content: center;
    align-items: center;
}

.rowPrerequisites{display:flex; flex-direction:row;}

.btn{
    white-space: nowrap;
    color: rgb(140, 13, 13);
}

.sub{ 
    font-size: var(--fs-4);
    font-weight: var(--fw-bold);
    background: var(--clr-subbox-background);
    box-shadow: var(--bs);
    border-radius: var(--br-background);
    margin: var(--margin-thin);
    margin-top: 2rem;
    padding: var(--fs-3);
    width: var(--bw-verylarge);
    transition: transform .3s ease;
    cursor: pointer;
   
}

.course__body{
    font-family: var(font-family);
    font-weight: var(--fw-light);
    font-size: var(--fs-4);
    padding-left: 5%;
    cursor: var(--crsr-pointercrsr-);
    border-bottom: 10px;
}

.course:hover{
    transform: scale(1.1);
}

.course__title{
    font-family: var(font-family);
    color: rgb(61, 27, 35);
    font-weight: var(--fw-bold);
    font-size: var(--fs-2);
    text-decoration: underline;
    cursor: var(--crsr-pointercrsr-);
    border-bottom: 10px;
}

.course__subboxes{
    font-family: var(font-family);
    font-weight: var(--fw-reg);
    font-size: var(--fs-4);
    color: rgb(75, 75, 78);
    text-decoration: underline;
    cursor: var(--crsr-pointercrsr-);
}

.wrapper{
    margin: 2rem;
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr;
    justify-content: center;
}

.dynamic-text{
    font-size: var(--fs-4);
}

@media screen and (min-width:600px){
    .wrapper{
        grid-template-columns: repeat(auto-fit,minmax((14rem,28rem)));
    }

    .course{
        flex-direction: column;
        text-align: center;
        /*min-width: 50rem;*/
    }
}

